# file-insights

./: .gitignore  LICENSE  README.md  pyproject.toml
file_insights/: __init__.py  __main__.py  config.py  constants.py  database.py  insights.py  main.py  parser.py  utils.py  video.py
file_insights/tests/: __init__.py  test_insights.py  test_parser.py
tests/: __init__.py  test_insights.py  test_parser.py
