[tool.poetry]
name = "file-insights"
version = "0.1.0"
description = "A tool to parse directories recursively and generate insights about files"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "file_insights"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
tqdm = "^4.65.0"
rich = "^13.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"

[tool.poetry.scripts]
file-insights = "file_insights.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 